--- a/Mini-Project-UI/Components/Layout/NavMenu.razor
+++ b/Mini-Project-UI/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
                 <div class="nav-item px-3">
             <NavLink class="nav-link" href="supplierGrid" Match="NavLinkMatch.All">
-                <i class="fas fa-warehouse me-1"></i>Supplier
+                <i class="fas fa-warehouse me-1"></i>Suppliers
             </NavLink>
         </div>
 
